--- a/src-widgets/src/i18n/de.json
+++ b/src-widgets/src/i18n/de.json
@@ -105,5 +105,6 @@
   "Select items": "Gegenstände auswählen",
   "Add": "Hinzufügen",
   "Close": "Schließen",
-  "Indicate changes with color": "Änderungen farblich kennzeichnen "
+  "Indicate changes with color": "Änderungen farblich kennzeichnen ",
+  "instrument": "Instrument"
 }
