--- a/src-widgets/src/i18n/en.json
+++ b/src-widgets/src/i18n/en.json
@@ -105,5 +105,6 @@
   "Select items": "Select items",
   "Add": "Add",
   "Close": "Close",
-  "Indicate changes with color": "Indicate changes with color"
+  "Indicate changes with color": "Indicate changes with color",
+  "instrument": "Instrument"
 }
