--- a/src-widgets/src/i18n/es.json
+++ b/src-widgets/src/i18n/es.json
@@ -105,5 +105,6 @@
   "Select items": "Seleccionar articulos",
   "Add": "Agregar",
   "Close": "Cerca",
-  "Indicate changes with color": "Indicar cambios con color."
+  "Indicate changes with color": "Indicar cambios con color.",
+  "instrument": "Instrumento"
 }
