--- a/src-widgets/src/i18n/fr.json
+++ b/src-widgets/src/i18n/fr.json
@@ -105,5 +105,6 @@
   "Select items": "Sélectionner des éléments",
   "Add": "Ajouter",
   "Close": "Fermer",
-  "Indicate changes with color": "Indiquer les changements avec la couleur"
+  "Indicate changes with color": "Indiquer les changements avec la couleur",
+  "instrument": "Instrument"
 }
