--- a/src-widgets/src/i18n/it.json
+++ b/src-widgets/src/i18n/it.json
@@ -105,5 +105,6 @@
   "Select items": "Seleziona elementi",
   "Add": "Aggiungere",
   "Close": "Vicino",
-  "Indicate changes with color": "Indicare i cambiamenti con il colore"
+  "Indicate changes with color": "Indicare i cambiamenti con il colore",
+  "instrument": "Strumento"
 }
