--- a/src-widgets/src/i18n/nl.json
+++ b/src-widgets/src/i18n/nl.json
@@ -105,5 +105,6 @@
   "Select items": "Selecteer items",
   "Add": "Toevoegen",
   "Close": "Dichtbij",
-  "Indicate changes with color": "Geef veranderingen aan met kleur"
+  "Indicate changes with color": "Geef veranderingen aan met kleur",
+  "instrument": "Instrument"
 }
