--- a/src-widgets/src/i18n/pl.json
+++ b/src-widgets/src/i18n/pl.json
@@ -105,5 +105,6 @@
   "Select items": "Wybierz elementy",
   "Add": "Dodać",
   "Close": "Zamknąć",
-  "Indicate changes with color": "Wskaż zmiany kolorem"
+  "Indicate changes with color": "Wskaż zmiany kolorem",
+  "instrument": "Instrument"
 }
