--- a/src-widgets/src/i18n/pt.json
+++ b/src-widgets/src/i18n/pt.json
@@ -105,5 +105,6 @@
   "Select items": "Selecionar itens",
   "Add": "Adicionar",
   "Close": "Fechar",
-  "Indicate changes with color": "Indique alterações com cor"
+  "Indicate changes with color": "Indique alterações com cor",
+  "instrument": "Instrumento"
 }
