--- a/src-widgets/src/i18n/ru.json
+++ b/src-widgets/src/i18n/ru.json
@@ -105,5 +105,6 @@
   "Select items": "Выберите элементы",
   "Add": "Добавить",
   "Close": "Закрывать",
-  "Indicate changes with color": "Обозначать изменения цветом"
+  "Indicate changes with color": "Обозначать изменения цветом",
+  "instrument": "Инструмент"
 }
