--- a/src-widgets/src/i18n/uk.json
+++ b/src-widgets/src/i18n/uk.json
@@ -105,5 +105,6 @@
   "Select items": "Виберіть предмети",
   "Add": "Додати",
   "Close": "Закрити",
-  "Indicate changes with color": "Позначте зміни кольором"
+  "Indicate changes with color": "Позначте зміни кольором",
+  "instrument": "Інструмент"
 }
