--- a/src-widgets/src/i18n/zh-cn.json
+++ b/src-widgets/src/i18n/zh-cn.json
@@ -105,5 +105,6 @@
   "Select items": "选择项目",
   "Add": "添加",
   "Close": "关闭",
-  "Indicate changes with color": "用颜色表示变化"
+  "Indicate changes with color": "用颜色表示变化",
+  "instrument": "乐器"
 }
