--- a/src-widgets/src/i18n/it.json
+++ b/src-widgets/src/i18n/it.json
@@ -106,5 +106,8 @@
   "Add": "Aggiungere",
   "Close": "Vicino",
   "Indicate changes with color": "Indicare i cambiamenti con il colore",
-  "instrument": "Strumento"
+  "instrument": "Strumento",
+  "Filter": "Ricerca",
+  "Expand all": "Espandi tutto",
+  "Close all": "Chiudi tutto"
 }
