--- a/src-widgets/src/i18n/pt.json
+++ b/src-widgets/src/i18n/pt.json
@@ -106,5 +106,8 @@
   "Add": "Adicionar",
   "Close": "Fechar",
   "Indicate changes with color": "Indique alterações com cor",
-  "instrument": "Instrumento"
+  "instrument": "Instrumento",
+  "Filter": "Procurar",
+  "Expand all": "Expandir todos",
+  "Close all": "Feche tudo"
 }
