--- a/src-widgets/src/i18n/ru.json
+++ b/src-widgets/src/i18n/ru.json
@@ -106,5 +106,8 @@
   "Add": "Добавить",
   "Close": "Закрывать",
   "Indicate changes with color": "Обозначать изменения цветом",
-  "instrument": "Инструмент"
+  "instrument": "Инструмент",
+  "Filter": "Поиск",
+  "Expand all": "Расширить все",
+  "Close all": "Закрыть все"
 }
