--- a/src-widgets/src/i18n/uk.json
+++ b/src-widgets/src/i18n/uk.json
@@ -106,5 +106,8 @@
   "Add": "Додати",
   "Close": "Закрити",
   "Indicate changes with color": "Позначте зміни кольором",
-  "instrument": "Інструмент"
+  "instrument": "Інструмент",
+  "Filter": "Пошук",
+  "Expand all": "Розгорнути все",
+  "Close all": "Закрити все"
 }
