* (bluefox) Corrected vis-2 widgets

--- a/src-widgets/src/i18n/de.json
+++ b/src-widgets/src/i18n/de.json
@@ -78,16 +78,14 @@
   "Color": "Farbe",
   "Digits after comma": "Ziffern nach dem Komma",
   "Digits before comma": "Ziffern vor Komma",
-  "Indicators count": "Indikatoren zählen",
-  "Left / Top": "Links oben",
+  "Left / Top": "Links / Oben",
   "Name": "Name",
   "PORT": "BKBD",
   "Position": "Position",
-  "Right / Bottom": "Rechts unten",
+  "Right / Bottom": "Rechts / unten",
   "STBD": "STBD",
   "Unit": "Einheit",
   "autopilot": "Autopilot",
-  "group_indicator": "Indikator",
   "id": "AUSWEIS",
   "rudder": "Ruder",
   "Use instance": "Instanz verwenden",
@@ -100,7 +98,7 @@
   "Before comma": "Vor Komma",
   "After comma": "Nach Komma",
   "Apply": "Anwenden",
-  "Cancel": "Stornieren",
+  "Cancel": "Abbrechen",
   "Show plus by positive numbers": "Bei positiven Zahlen Plus anzeigen",
   "Select items": "Gegenstände auswählen",
   "Add": "Hinzufügen",
@@ -109,5 +107,6 @@
   "instrument": "Instrument",
   "Filter": "Suchen",
   "Expand all": "Alle erweitern",
-  "Close all": "Alle schließen"
+  "Close all": "Alle schließen",
+  "Indicators": "Indikatoren"
 }
