--- a/src-widgets/src/i18n/de.json
+++ b/src-widgets/src/i18n/de.json
@@ -108,5 +108,6 @@
   "Filter": "Suchen",
   "Expand all": "Alle erweitern",
   "Close all": "Alle schließen",
-  "Indicators": "Indikatoren"
+  "Indicators": "Indikatoren",
+  "Autopilot heading": "Autopilot-Kurs"
 }
