--- a/src-widgets/src/i18n/en.json
+++ b/src-widgets/src/i18n/en.json
@@ -108,5 +108,6 @@
   "Filter": "Search",
   "Expand all": "Expand all",
   "Close all": "Close all",
-  "Indicators": "Indicators"
+  "Indicators": "Indicators",
+  "Autopilot heading": "Autopilot heading"
 }
