--- a/src-widgets/src/i18n/es.json
+++ b/src-widgets/src/i18n/es.json
@@ -108,5 +108,6 @@
   "Filter": "Buscar",
   "Expand all": "Expandir todo",
   "Close all": "Cierra todo",
-  "Indicators": "Indicadores"
+  "Indicators": "Indicadores",
+  "Autopilot heading": "Rumbo del piloto automático"
 }
