--- a/src-widgets/src/i18n/fr.json
+++ b/src-widgets/src/i18n/fr.json
@@ -108,5 +108,6 @@
   "Filter": "Recherche",
   "Expand all": "Développer tout",
   "Close all": "Ferme tout",
-  "Indicators": "Indicateurs"
+  "Indicators": "Indicateurs",
+  "Autopilot heading": "Cap du pilote automatique"
 }
