--- a/src-widgets/src/i18n/it.json
+++ b/src-widgets/src/i18n/it.json
@@ -108,5 +108,6 @@
   "Filter": "Ricerca",
   "Expand all": "Espandi tutto",
   "Close all": "Chiudi tutto",
-  "Indicators": "Indicatori"
+  "Indicators": "Indicatori",
+  "Autopilot heading": "Direzione del pilota automatico"
 }
