--- a/src-widgets/src/i18n/nl.json
+++ b/src-widgets/src/i18n/nl.json
@@ -108,5 +108,6 @@
   "Filter": "Zoekopdracht",
   "Expand all": "Alles uitvouwen",
   "Close all": "Sluit alles",
-  "Indicators": "Indicatoren"
+  "Indicators": "Indicatoren",
+  "Autopilot heading": "Stuurautomaat koers"
 }
