--- a/src-widgets/src/i18n/pl.json
+++ b/src-widgets/src/i18n/pl.json
@@ -108,5 +108,6 @@
   "Filter": "Szukaj",
   "Expand all": "Rozwiń wszystkie",
   "Close all": "Zamknij wszystko",
-  "Indicators": "Wskaźniki"
+  "Indicators": "Wskaźniki",
+  "Autopilot heading": "Kierunek autopilota"
 }
