--- a/src-widgets/src/i18n/pt.json
+++ b/src-widgets/src/i18n/pt.json
@@ -108,5 +108,6 @@
   "Filter": "Procurar",
   "Expand all": "Expandir todos",
   "Close all": "Feche tudo",
-  "Indicators": "Indicadores"
+  "Indicators": "Indicadores",
+  "Autopilot heading": "Rumo do piloto automático"
 }
