--- a/src-widgets/src/i18n/ru.json
+++ b/src-widgets/src/i18n/ru.json
@@ -108,5 +108,6 @@
   "Filter": "Поиск",
   "Expand all": "Расширить все",
   "Close all": "Закрыть все",
-  "Indicators": "Индикаторы"
+  "Indicators": "Индикаторы",
+  "Autopilot heading": "Курс автопилота"
 }
