--- a/src-widgets/src/i18n/uk.json
+++ b/src-widgets/src/i18n/uk.json
@@ -108,5 +108,6 @@
   "Filter": "Пошук",
   "Expand all": "Розгорнути все",
   "Close all": "Закрити все",
-  "Indicators": "Індикатори"
+  "Indicators": "Індикатори",
+  "Autopilot heading": "Рух автопілота"
 }
