--- a/src-widgets/src/i18n/zh-cn.json
+++ b/src-widgets/src/i18n/zh-cn.json
@@ -108,5 +108,6 @@
   "Filter": "搜索",
   "Expand all": "展开全部",
   "Close all": "关闭所有",
-  "Indicators": "指标"
+  "Indicators": "指标",
+  "Autopilot heading": "自动驾驶航向"
 }
