--- a/src-widgets/src/i18n/nl.json
+++ b/src-widgets/src/i18n/nl.json
@@ -109,5 +109,7 @@
   "Expand all": "Alles uitvouwen",
   "Close all": "Sluit alles",
   "Indicators": "Indicatoren",
-  "Autopilot heading": "Stuurautomaat koers"
+  "Autopilot heading": "Stuurautomaat koers",
+  "Synchronize": "Synchroniseren",
+  "Synchronize with other browsers": "Synchroniseer met andere browsers"
 }
