--- a/src-widgets/src/i18n/pt.json
+++ b/src-widgets/src/i18n/pt.json
@@ -109,5 +109,7 @@
   "Expand all": "Expandir todos",
   "Close all": "Feche tudo",
   "Indicators": "Indicadores",
-  "Autopilot heading": "Rumo do piloto automático"
+  "Autopilot heading": "Rumo do piloto automático",
+  "Synchronize": "Sincronizar",
+  "Synchronize with other browsers": "Sincronize com outros navegadores"
 }
