--- a/src-widgets/src/i18n/zh-cn.json
+++ b/src-widgets/src/i18n/zh-cn.json
@@ -109,5 +109,7 @@
   "Expand all": "展开全部",
   "Close all": "关闭所有",
   "Indicators": "指标",
-  "Autopilot heading": "自动驾驶航向"
+  "Autopilot heading": "自动驾驶航向",
+  "Synchronize": "同步",
+  "Synchronize with other browsers": "与其他浏览器同步"
 }
