--- a/src-widgets/src/i18n/es.json
+++ b/src-widgets/src/i18n/es.json
@@ -109,5 +109,7 @@
   "Expand all": "Expandir todo",
   "Close all": "Cierra todo",
   "Indicators": "Indicadores",
-  "Autopilot heading": "Rumbo del piloto automático"
+  "Autopilot heading": "Rumbo del piloto automático",
+  "Synchronize": "Sincronizar",
+  "Synchronize with other browsers": "Sincronizar con otros navegadores"
 }
