--- a/src-widgets/src/i18n/it.json
+++ b/src-widgets/src/i18n/it.json
@@ -109,5 +109,7 @@
   "Expand all": "Espandi tutto",
   "Close all": "Chiudi tutto",
   "Indicators": "Indicatori",
-  "Autopilot heading": "Direzione del pilota automatico"
+  "Autopilot heading": "Direzione del pilota automatico",
+  "Synchronize": "Sincronizzare",
+  "Synchronize with other browsers": "Sincronizza con altri browser"
 }
